# Acoustique_Matricant

./: LICENSE  README.md  requirement.txt  requirements.txt  setup.cfg
Acoustique_Matricant/: __init__.py  matricant.py  muliticouche.py  ploter.py  rt_fluide.py  rt_solide.py
Exemple/: deck.yaml  deck2.yaml  deck_ext.yaml  main.py
Exemple Spyder/: main.py
