[metadata]
name = AtmosphericBalloon
version = 0.1
author = Ilyass Tabiai
description = This is an example project
long_description = This is a longer description for the project
url = https://ilylabs.com/
keywords = sample, example, setuptools

[options]
python_requires = >=3.7
install_requires =
    numpy